# bind

./: .gitmodules  CMakeLists.txt  types.natvis
include/bind/: AliasType.h  DataType.h  EnumType.h  FuncMatch.h  Function.h  FunctionType.h  Namespace.h  Namespace.hpp  PointerType.h  Registry.h  Registry.hpp  Value.h  ValuePointer.h  bind.h  bind.hpp  types.h
include/bind/interfaces/: ICallHandler.h  ISymbol.h  ITypeBuilder.h  IWithUserData.h  IWithUserData.hpp
include/bind/util/: Array.h  Array.hpp  EnumTypeBuilder.hpp  Exception.h  FuncWrap.hpp  ObjectTypeBuilder.hpp  Pointer.h  Pointer.hpp  PrimitiveTypeBuilder.hpp  String.h  meta.hpp
src/: AliasType.cpp  DataType.cpp  EnumType.cpp  FuncMatch.cpp  Function.cpp  FunctionType.cpp  Namespace.cpp  PointerType.cpp  Registry.cpp  Value.cpp  ValuePointer.cpp  bind.cpp
src/interfaces/: ICallHandler.cpp  ISymbol.cpp  ITypeBuilder.cpp  IWithUserData.cpp
src/util/: Exception.cpp  Pointer.cpp  String.cpp
test/: CMakeLists.txt  Common.h  TestAliasType.cpp  TestCalling.cpp  TestDataType.cpp  TestEnumType.cpp  TestISymbol.cpp  TestMetadata.cpp  TestPointerType.cpp  TestValuePointer.cpp  main.cpp
